chore: Cache user data
